ticket #842 - fixing gallery header squishing

--- a/frontend/scss/molecules/_m-article-header.scss
+++ b/frontend/scss/molecules/_m-article-header.scss
@@ -734,7 +734,7 @@ $thumbTease: 4px;
   min-height: 500px;
   max-height: 600px;
   padding-top: 16px;
-  padding-bottom: 88px;
+  padding-bottom: 116px;
   background-color: $color__bg--primary;
 
   @include breakpoint('small+') {
